AddIns/Neo.AddIn.GTS/Api.cs


        [DllImport(DLL)]
        public static extern short GT_GetAxisPrfPos(Card card, Axis axis, out double pValue, short count = 1, IntPtr pClock = default(IntPtr));
        [DllImport(DLL)]
        public static extern short GT_GetAxisPrfVel(Card card, Axis axis, out double pValue, short count = 1, IntPtr pClock = default(IntPtr));
        [DllImport(DLL)]
        public static extern short GT_GetAxisPrfAcc(Card card, Axis axis, out double pValue, short count = 1, IntPtr pClock = default(IntPtr));
        [DllImport(DLL)]
        public static extern short GT_GetAxisEncPos(Card card, Axis axis, out double pValue, short count = 1, IntPtr pClock = default(IntPtr));
        [DllImport(DLL)]
        public static extern short GT_GetAxisEncVel(Card card, Axis axis, out double pValue, short count = 1, IntPtr pClock = default(IntPtr));
        [DllImport(DLL)]
        public static extern short GT_GetAxisEncAcc(Card card, Axis axis, out double pValue, short count = 1, IntPtr pClock = default(IntPtr));
        [DllImport(DLL)]
        public static extern short GT_GetAxisError(Card card, Axis axis, out double pValue, short count = 1, IntPtr pClock = default(IntPtr));

        [DllImport(DLL)]
        public static extern short GT_SetLongVar(Card card, short index, int value);
        [DllImport(DLL)]
        public static extern short GT_GetLongVar(Card card, short index, out int pValue);
        [DllImport(DLL)]
        public static extern short GT_SetDoubleVar(Card card, short index, double pValue);
        [DllImport(DLL)]
        public static extern short GT_GetDoubleVar(Card card, short index, out double pValue);

        [DllImport(DLL)]
        public static extern short GT_SetControlFilter(Card card, short control, short index);
        [DllImport(DLL)]
        public static extern short GT_GetControlFilter(Card card, short control, out short pIndex);

        [DllImport(DLL)]
        public static extern short GT_SetPid(Card card, short control, short index, ref TPid pPid);
        [DllImport(DLL)]
        public static extern short GT_GetPid(Card card, short control, short index, out TPid pPid);

        [DllImport(DLL)]
        public static extern short GT_SetKvffFilter(Card card, short control, short index, short kvffFilterExp, double accMax);
        [DllImport(DLL)]
        public static extern short GT_GetKvffFilter(Card card, short control, short index, out short pKvffFilterExp, out double pAccMax);

        [DllImport(DLL)]
        public static extern short GT_Update(Card card, int mask);
        [DllImport(DLL)]
        public static extern short GT_SetPos(Card card, Axis axis, int pos);
        [DllImport(DLL)]
        public static extern short GT_GetPos(Card card, Axis axis, out int pPos);
        [DllImport(DLL)]
        public static extern short GT_SetVel(Card card, Axis axis, double vel);
        [DllImport(DLL)]
        public static extern short GT_GetVel(Card card, Axis axis, out double pVel);

        [DllImport(DLL)]
        public static extern short GT_PrfTrap(Card card, Axis axis);
        [DllImport(DLL)]
        public static extern short GT_SetTrapPrm(Card card, Axis axis, ref TTrapPrm pPrm);
        [DllImport(DLL)]
        public static extern short GT_GetTrapPrm(Card card, Axis axis, out TTrapPrm pPrm);

        [DllImport(DLL)]
        public static extern short GT_PrfJog(Card card, Axis axis);
        [DllImport(DLL)]
        public static extern short GT_SetJogPrm(Card card, Axis axis, ref TJogPrm pPrm);
        [DllImport(DLL)]
        public static extern short GT_GetJogPrm(Card card, Axis axis, out TJogPrm pPrm);

        [DllImport(DLL)]
        public static extern short GT_PrfPt(Card card, short profile, short mode);
        [DllImport(DLL)]
        public static extern short GT_SetPtLoop(Card card, short profile, int loop);
        [DllImport(DLL)]
        public static extern short GT_GetPtLoop(Card card, short profile, out int pLoop);
        [DllImport(DLL)]
        public static extern short GT_PtSpace(Card card, short profile, out short pSpace, short fifo);
        [DllImport(DLL)]
        public static extern short GT_PtData(Card card, short profile, double pos, int time, short type, short fifo);
        [DllImport(DLL)]
        public static extern short GT_PtDataWN(Card card, short profile, double pos, int time, short type, int segNum, short fifo);
        [DllImport(DLL)]
        public static extern short GT_PtClear(Card card, short profile, short fifo);
        [DllImport(DLL)]
        public static extern short GT_PtStart(Card card, int mask, int option);
        [DllImport(DLL)]
        public static extern short GT_SetPtMemory(Card card, short profile, short memory);
        [DllImport(DLL)]
        public static extern short GT_GetPtMemory(Card card, short profile, out short pMemory);
        [DllImport(DLL)]
        public static extern short GT_PtGetSegNum(Card card, short profile, out int pSegNum);

        [DllImport(DLL)]
        public static extern short GT_PrfGear(Card card, short profile, short dir);
        [DllImport(DLL)]
        public static extern short GT_SetGearMaster(Card card, short profile, short masterIndex, short masterType, short masterItem);
        [DllImport(DLL)]
        public static extern short GT_GetGearMaster(Card card, short profile, out short pMasterIndex, out short pMasterType, out short pMasterItem);
        [DllImport(DLL)]
        public static extern short GT_SetGearRatio(Card card, short profile, int masterEven, int slaveEven, int masterSlope);
        [DllImport(DLL)]
        public static extern short GT_GetGearRatio(Card card, short profile, out int pMasterEven, out int pSlaveEven, out int pMasterSlope);
        [DllImport(DLL)]
        public static extern short GT_GearStart(Card card, int mask);
        [DllImport(DLL)]
        public static extern short GT_SetGearEvent(Card card, short profile, short gearEvent, int startPara0, int startPara1);
        [DllImport(DLL)]
        public static extern short GT_GetGearEvent(Card card, short profile, out short pEvent, out int pStartPara0, out int pStartPara1);

        [DllImport(DLL)]
        public static extern short GT_PrfFollow(Card card, short profile, short dir);
        [DllImport(DLL)]
        public static extern short GT_SetFollowMaster(Card card, short profile, short masterIndex, short masterType, short masterItem);
        [DllImport(DLL)]
        public static extern short GT_GetFollowMaster(Card card, short profile, out short pMasterIndex, out short pMasterType, out short pMasterItem);
        [DllImport(DLL)]
        public static extern short GT_SetFollowLoop(Card card, short profile, int loop);
        [DllImport(DLL)]
        public static extern short GT_GetFollowLoop(Card card, short profile, out int pLoop);
        [DllImport(DLL)]
        public static extern short GT_SetFollowEvent(Card card, short profile, short followEvent, short masterDir, int pos);
        [DllImport(DLL)]
        public static extern short GT_GetFollowEvent(Card card, short profile, out short pFollowEvent, out short pMasterDir, out int pPos);
        [DllImport(DLL)]
        public static extern short GT_FollowSpace(Card card, short profile, out short pSpace, short fifo);
        [DllImport(DLL)]
        public static extern short GT_FollowData(Card card, short profile, int masterSegment, double slaveSegment, short type, short fifo);
        [DllImport(DLL)]
        public static extern short GT_FollowClear(Card card, short profile, short fifo);
        [DllImport(DLL)]
        public static extern short GT_FollowStart(Card card, int mask, int option);
        [DllImport(DLL)]
        public static extern short GT_FollowSwitch(Card card, int mask);
        [DllImport(DLL)]
        public static extern short GT_SetFollowMemory(Card card, short profile, short memory);
        [DllImport(DLL)]
        public static extern short GT_GetFollowMemory(Card card, short profile, out short memory);
        [DllImport(DLL)]
        public static extern short GT_GetFollowStatus(Card card, short profile, out short pFifoNum, out short pSwitchStatus);
        [DllImport(DLL)]
        public static extern short GT_SetFollowPhasing(Card card, short profile, short profilePhasing);
        [DllImport(DLL)]
        public static extern short GT_GetFollowPhasing(Card card, short profile, out short pProfilePhasing);

        [DllImport(DLL)]
        public static extern short GT_Compile(Card card, string pFileName, out TCompileInfo pWrongInfo);
        [DllImport(DLL)]
        public static extern short GT_Download(Card card, string pFileName);

        [DllImport(DLL)]
        public static extern short GT_GetFunId(Card card, string pFunName, out short pFunId);
        [DllImport(DLL)]
        public static extern short GT_Bind(Card card, short thread, short funId, short page);

        [DllImport(DLL)]
        public static extern short GT_RunThread(Card card, short thread);
        [DllImport(DLL)]
        public static extern short GT_StopThread(Card card, short thread);
        [DllImport(DLL)]
        public static extern short GT_PauseThread(Card card, short thread);

        [DllImport(DLL)]
        public static extern short GT_GetThreadSts(Card card, short thread, out TThreadSts pThreadSts);

        [DllImport(DLL)]
        public static extern short GT_GetVarId(Card card, string pFunName, string pVarName, out TVarInfo pVarInfo);
        [DllImport(DLL)]
        public static extern short GT_SetVarValue(Card card, short page, ref TVarInfo pVarInfo, ref double pValue, short count);
        [DllImport(DLL)]
        public static extern short GT_GetVarValue(Card card, short page, ref TVarInfo pVarInfo, out double pValue, short count);
